enable overclocking to 1400MHz and port in the (very ugly) voltage adjustment code.

--- a/arch/arm/configs/c210_p2w_rev02_defconfig
+++ b/arch/arm/configs/c210_p2w_rev02_defconfig
@@ -423,7 +423,7 @@ CONFIG_MMC_MSHC_CLOCK_GATING=y
 #
 CONFIG_S5PV310_PM_HOTPLUG=y
 CONFIG_S5PV310_ASV=y
-# CONFIG_ARM_OVERCLK_TO_1400 is not set
+CONFIG_ARM_OVERCLK_TO_1400=y
 
 #
 # BUS Frequency and Voltage scaling (Experimental)
