blind port j4fs module from i777 (thanks Entropy512.)  One less problem module.

--- a/arch/arm/configs/c210_p2w_rev02_defconfig
+++ b/arch/arm/configs/c210_p2w_rev02_defconfig
@@ -2320,6 +2320,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_ADIS16255 is not set
 # CONFIG_EASYCAP is not set
 CONFIG_VIBETONZ=y
+CONFIG_SAMSUNG_J4FS=m
 # CONFIG_SAMSUNG_LTE is not set
 # CONFIG_SAMSUNG_LTE_BOOTLOADER is not set
 # CONFIG_SAMSUNG_LTE_MODEMCTL is not set
