--- a/drivers/samsung/Makefile
+++ b/drivers/samsung/Makefile
@@ -5,5 +5,6 @@
 # Object files in subdirectories
 
 obj-$(CONFIG_VIBETONZ)		+= vibetonz/
+obj-$(CONFIG_SAMSUNG_J4FS)	+= j4fs/
 obj-$(CONFIG_SAMSUNG_LTE_BOOTLOADER)	+= lte_bootloader/
 obj-$(CONFIG_SAMSUNG_LTE_MODEMCTL)		+= lte_modemctl/
