--- a/arch/arm/configs/c210_p2w_rev02_defconfig
+++ b/arch/arm/configs/c210_p2w_rev02_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.36
-# Tue Oct  4 17:50:47 2011
+# Linux kernel version: 2.6.36-garyd9.working
+# Sun Jan  8 02:43:54 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -91,11 +91,8 @@ CONFIG_INITRAMFS_ROOT_GID=0
 # CONFIG_RD_BZIP2 is not set
 CONFIG_RD_LZMA=y
 # CONFIG_RD_LZO is not set
-# CONFIG_INITRAMFS_COMPRESSION_NONE is not set 
-# CONFIG_INITRAMFS_COMPRESSION_GZIP is not set 
-# CONFIG_INITRAMFS_COMPRESSION_BZIP2 is not set 
-CONFIG_INITRAMFS_COMPRESSION_LZMA=y 
-# CONFIG_INITRAMFS_COMPRESSION_LZO is not set 
+# CONFIG_INITRAMFS_COMPRESSION_NONE is not set
+CONFIG_INITRAMFS_COMPRESSION_LZMA=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -128,7 +125,6 @@ CONFIG_PERF_USE_VMALLOC=y
 #
 # CONFIG_PERF_EVENTS is not set
 # CONFIG_PERF_COUNTERS is not set
-# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_SLUB_DEBUG=y
 CONFIG_COMPAT_BRK=y
@@ -136,8 +132,6 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
-# CONFIG_TRACEPOINTS is not set
-# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
@@ -151,7 +145,7 @@ CONFIG_HAVE_CLK=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-# CONFIG_SLABINFO is not set
+CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -411,12 +405,6 @@ CONFIG_MMC_MSHC_CLOCK_GATING=y
 # Debugging Feature
 #
 # CONFIG_SEC_DEBUG is not set
-# CONFIG_SEC_DEBUG_SCHED_LOG is not set
-# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
-# CONFIG_SEC_DEBUG_USER is not set
-# CONFIG_SEC_DEBUG_PM_TEMP is not set
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
-# CONFIG_S5PV310_WATCHDOG_RESET is not set
 
 #
 # Support dynamic cpu hotplug (Experimental)
@@ -477,6 +465,7 @@ CONFIG_ARM_ERRATA_751472=y
 # CONFIG_ARM_ERRATA_752520 is not set
 CONFIG_PL310_ERRATA_727915=y
 CONFIG_ARM_ERRATA_753970=y
+# CONFIG_ARM_ERRATA_754322 is not set
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -521,7 +510,6 @@ CONFIG_OABI_COMPAT=y
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_ARCH_SKIP_SECONDARY_CALIBRATE=y
 CONFIG_HIGHMEM=y
-CONFIG_HW_PERF_EVENTS=y
 # CONFIG_SPARSE_IRQ is not set
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
@@ -865,13 +853,13 @@ CONFIG_PHONET=y
 # CONFIG_IEEE802154 is not set
 # CONFIG_NET_SCHED is not set
 # CONFIG_DCB is not set
+# CONFIG_DNS_RESOLVER is not set
 CONFIG_RPS=y
 
 #
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 CONFIG_IRDA=y
@@ -1298,6 +1286,7 @@ CONFIG_TOUCHSCREEN_MELFAS=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_MXT1386 is not set
+# CONFIG_TOUCHSCREEN_P2_NTT is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_GYRO_K3G is not set
 # CONFIG_SENSORS_BH1721FVC is not set
@@ -1664,15 +1653,14 @@ CONFIG_VIDEO_S5K5CCGX_P2=y
 # CONFIG_VIDEO_S5K5BBGX is not set
 CONFIG_VIDEO_SR200PC20=y
 CONFIG_VIDEO_SR200PC20_P2=y
+# CONFIG_VIDEO_SR200PC20_P4W is not set
 # CONFIG_VIDEO_S5K3BA is not set
 # CONFIG_VIDEO_S5K4BA is not set
 # CONFIG_VIDEO_S5K4EA is not set
 # CONFIG_VIDEO_S5K6AA is not set
-#
-# Camera Property
-#
 CONFIG_VIDEO_ANTIBANDING_50Hz=y
 # CONFIG_VIDEO_ANTIBANDING_60Hz is not set
+# CONFIG_VIDEO_IMPROVE_STREAMOFF is not set
 
 #
 # Video and audio decoders
@@ -2015,7 +2003,7 @@ CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB_ARCH_HAS_OHCI=y
 CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB=y
-CONFIG_USB_DEBUG=y
+# CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 #
@@ -2154,6 +2142,7 @@ CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_RNDIS_WCEIS=y
 CONFIG_USB_ANDROID_ACCESSORY=y
+# CONFIG_USB_ANDROID_DIAG is not set
 CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
@@ -2325,7 +2314,6 @@ CONFIG_SAMSUNG_J4FS=m
 # CONFIG_SAMSUNG_LTE_BOOTLOADER is not set
 # CONFIG_SAMSUNG_LTE_MODEMCTL is not set
 # CONFIG_SAMSUNG_PHONE_SVNET is not set
-# CONFIG_SAMSUNG_PHONE_DPRAM_INTERNAL is not set
 CONFIG_ACCESSORY=y
 CONFIG_30PIN_CONN=y
 CONFIG_MHL_SII9234=y
@@ -2397,10 +2385,9 @@ CONFIG_TMPFS_POSIX_ACL=y
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
 CONFIG_MISC_FILESYSTEMS=y
-# wtl@ksingh - enable encrypt fs
-CONFIG_ECRYPT_FS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
+CONFIG_ECRYPT_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -2515,7 +2502,6 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
-# CONFIG_DEBUG_PI_LIST is not set
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
 # CONFIG_DEBUG_MUTEXES is not set
@@ -2529,7 +2515,6 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_HIGHMEM is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_INFO is not set
-# CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
@@ -2549,32 +2534,11 @@ CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_LATENCYTOP is not set
 # CONFIG_SYSCTL_SYSCALL_CHECK is not set
 # CONFIG_PAGE_POISONING is not set
-# CONFIG_NOP_TRACER is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
-CONFIG_RING_BUFFER=y
-# CONFIG_EVENT_TRACING is not set
-# CONFIG_CONTEXT_SWITCH_TRACER is not set
-CONFIG_RING_BUFFER_ALLOW_SWAP=y
-# CONFIG_TRACING is not set
-# CONFIG_GENERIC_TRACER is not set
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
-# CONFIG_FUNCTION_TRACER is not set
-# CONFIG_IRQSOFF_TRACER is not set
-# CONFIG_PREEMPT_TRACER is not set
-# CONFIG_SCHED_TRACER is not set
-CONFIG_BRANCH_PROFILE_NONE=y
-# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
-# CONFIG_PROFILE_ALL_BRANCHES is not set
-# CONFIG_STACK_TRACER is not set
-# CONFIG_BLK_DEV_IO_TRACE is not set
-# CONFIG_DYNAMIC_FTRACE is not set
-# CONFIG_FUNCTION_PROFILER is not set 
-# CONFIG_FTRACE_MCOUNT_RECORD is not set
-# CONFIG_FTRACE_STARTUP_TEST is not set
-# CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
@@ -2591,11 +2555,10 @@ CONFIG_DEBUG_S3C_UART=2
 #
 # Security options
 #
-# CONFIG_SECURITY is not set
-# CONFIG_SECURITYFS is not set
-#change@wtl.ksing - enabling key for ecryptfs
 CONFIG_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
+# CONFIG_SECURITY is not set
+# CONFIG_SECURITYFS is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_DEFAULT_SECURITY=""
 CONFIG_CRYPTO=y
@@ -2604,6 +2567,7 @@ CONFIG_CRYPTO=y
 # Crypto core or helper
 #
 CONFIG_CRYPTO_FIPS=y
+CONFIG_CRYPTO_FIPS_INTEG_OFFSET=0x20000000
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
@@ -2617,7 +2581,7 @@ CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
-#CONFIG_CRYPTO_MANAGER_DISABLE_TESTS
+# CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
 CONFIG_CRYPTO_GF128MUL=y
 CONFIG_CRYPTO_NULL=y
 # CONFIG_CRYPTO_PCRYPT is not set
@@ -2625,7 +2589,6 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_CRYPTO_TEST=y
-CONFIG_CRYPTO_FIPS_INTEG_OFFSET=0x20000000
 
 #
 # Authenticated Encryption with Associated Data
@@ -2719,7 +2682,7 @@ CONFIG_CRC32=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_LZMA=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
